[tool.poetry]
name = "text-to-image"
version = "0.1.0"
description = ""
authors = ["Samuel Sublate <samuel@asimov.academy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.30.2"
python-dotenv = "^1.0.1"
torch = "^2.4.0"
transformers = "^4.44.2"
torchvision = "^0.19.0"
sentencepiece = "^0.2.0"
accelerate = "^0.33.0"
protobuf = "^5.28.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
